--- a/ishop/index.html
+++ b/ishop/index.html
@@ -10,8 +10,8 @@
   <script src="https://unpkg.com/react@15/dist/react.js"></script> 
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
       
-  <script src="VotesBlock.js"></script>
-  <link rel="stylesheet" type="text/css" href="VotesBlock.css" />
+  <script src="StoreBlock.js"></script>
+  <link rel="stylesheet" type="text/css" href="StoreBlock.css" />
 
   <script>
 
