--- a/ishop2/index.html
+++ b/ishop2/index.html
@@ -3,6 +3,7 @@
 <head> 
   <meta charset="utf-8" />
   <title>iShop2</title>
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Open+Sans+Condensed:300" rel="stylesheet">
 </head> 
 <body> 
   <div id="container"></div> 
@@ -12,6 +13,8 @@
       
   <script src="StoreBlock.js"></script>
   <link rel="stylesheet" type="text/css" href="StoreBlock.css" />
+
+  <script src="anim.js"></script>
 
   <script>
 
