--- a/ishop2/index.html
+++ b/ishop2/index.html
@@ -6,15 +6,15 @@
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Open+Sans+Condensed:300" rel="stylesheet">
 </head> 
 <body> 
-  <div id="container"></div> 
+  <div id="container">
+
+  </div> 
       
   <script src="https://unpkg.com/react@15/dist/react.js"></script> 
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
       
   <script src="StoreBlock.js"></script>
   <link rel="stylesheet" type="text/css" href="StoreBlock.css" />
-
-  <script src="anim.js"></script>
 
   <script>
 
@@ -23,11 +23,11 @@
       {text:'Товар', code:"header", url:"Ссылка",price:"Цена (б.р.)",count:"На складе"}
     ;
     var itemArr=[ 
-      {text:'Люстра',code:1,url:"#",price:900,count:22},
-      {text:'Мяч',code:2,url:"#",price:900,count:148},
-      {text:'Стул',code:3,url:"#",price:900,count:4},
-      {text:'Картина',code:4,url:"#",price:900,count:96},
-      {text:'Диван',code:5,url:"#",price:900,count:123}
+      {text:'Люстра',code:1,url:"#",price:100,count:22},
+      {text:'Мяч',code:2,url:"#",price:200,count:148},
+      {text:'Стул',code:3,url:"#",price:299,count:4},
+      {text:'Картина',code:4,url:"#",price:400,count:96},
+      {text:'Диван',code:5,url:"#",price:500,count:123}
     ];
 
     ReactDOM.render(
